--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,7 @@
 resolver = "2"
 members = [
     "geometric_algebra",
-    "ga_cayley",
+    "ga_cayley", 
+    "permutations", 
+    "octahedral_cayley",
 ]
