Attempt a mobius version of a Sierpinski triangle

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ members = [
     "geometric_algebra",
     "ga_cayley", 
     "permutations", 
-    "octahedral_cayley", "mobius",
+    "octahedral_cayley", "mobius", "mobius_sierpinski",
 ]
