Implement Cline arcs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 resolver = "2"
 members = [
     "geometric_algebra",
-    "ga_cayley", 
-    "permutations", 
-    "octahedral_cayley", "mobius", "mobius_sierpinski",
+    "ga_cayley",
+    "permutations",
+    "octahedral_cayley",
+    "mobius",
 ]
