--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,3 @@
 [workspace]
 resolver = "2"
-members = [
-    "geometric_algebra",
-    "ga_cayley",
-    "permutations",
-    "octahedral_cayley",
-    "mobius",
-]
+members = ["geometric_algebra", "permutations", "mobius"]
