--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["geometric_algebra", "permutations", "mobius"]
+members = ["geometric_algebra", "permutations", "mobius", "abstraction"]
