--- a/mobius/Cargo.toml
+++ b/mobius/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+abstraction = { path = "../abstraction" }
 svg = "0.18.0"
 
 [dev-dependencies]
