--- a/mobius/Cargo.toml
+++ b/mobius/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 abstraction = { path = "../abstraction" }
 svg = "0.18.0"
 thiserror = "2.0.3"
+derive_more = { version = "1.0.0", features = ["display"] }
 
 [dev-dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
