--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
 [workspace]
 resolver = "2"
-members = ["geometric_algebra", "permutations", "mobius", "abstraction"]
+members = [
+    "geometric_algebra",
+    "permutations",
+    "mobius",
+    "abstraction",
+    "artworks",
+]
