Add to_primitive() methods for mobius geometry

--- a/mobius/Cargo.toml
+++ b/mobius/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 abstraction = { path = "../abstraction" }
+rendering = { path = "../rendering" }
 svg = "0.18.0"
 thiserror = "2.0.3"
 derive_more = { version = "1.0.0", features = ["display"] }
