--- a/artworks/Cargo.toml
+++ b/artworks/Cargo.toml
@@ -8,3 +8,5 @@ abstraction = { path = "../abstraction" }
 mobius = { path = "../mobius" }
 rendering = { path = "../rendering" }
 permutations = { path = "../permutations" }
+thiserror = "2.0.3"
+clap = { version = "4.5.20", features = ["derive"] }
